--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-script": "^2.0.5",
-    "react-scripts": "^4.0.1"
+    "react-scripts": "^4.0.1",
+    "reactjs-popup": "^2.0.4"
   }
 }
